--- a/src/journal/shell.pcss
+++ b/src/journal/shell.pcss
@@ -579,7 +579,7 @@ button {
 }
 
 .mx_EventTile_continuation[data-self="false"] .mx_EventTile_line > a {
-    color: var(--cpd-color-text-tertiary);
+    color: var(--cpd-color-text-secondary);
     font-size: var(--cpd-font-size-2xs);
     opacity: 1;
 }
@@ -599,7 +599,7 @@ button {
 
 .mx_MessageTimestamp {
     white-space: nowrap;
-    color: var(--cpd-color-text-tertiary);
+    color: var(--cpd-color-text-secondary);
     font-size: var(--cpd-font-size-2xs);
     line-height: 14px !important;
 }
